# osin-tools

./: .cursorrules  MANUAL_INTERACTIVO.md  README.md  SECURITY_REPORT.md  build_error.txt  build_errors.txt  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte  app.css
src-tauri/: .env  Cargo.toml  build_errors.txt  cargo_errors.txt  diff.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/persona-investigacion/: SKILL.md
src-tauri/skills/red-mapping/: SKILL.md
src-tauri/skills/whois-avanzado/: SKILL.md
src-tauri/src/: agent.rs  cases.rs  commands.rs  loop_detector.rs  mac_spoof.rs  main.rs  memory.rs  models.rs  orchestrator.rs  scraper.rs  secrets.rs  skills.rs  telegram.rs  tools.rs  tor_manager.rs  worker.rs
src/components/: AgentChat.svelte  AgentPanel.svelte  CaseSelector.svelte  Dashboard.svelte  FloatingBot.svelte  InvestigationToolbar.svelte  ManualTools.svelte  Settings.svelte  Sidebar.svelte  StatusBar.svelte  SuggestionsList.svelte  TargetsView.svelte  TaskCard.svelte  ToolCard.svelte  TopBar.svelte  WelcomeView.svelte
src/components/tools/: DomainEmailSearch.svelte  DomainIntel.svelte  EmailVerify.svelte  ExifViewer.svelte  FaceComparison.svelte  IpLookup.svelte  ReverseImageSearch.svelte  UsernameCheck.svelte
src/lib/: agentStore.svelte.js  configStore.svelte.js  face_recognition.js  osint_tools.js
