[package]
name = "osint-dashboard"
version = "0.0.0"
description = "A OSINT Dashboard"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
whois-rust = "1.5.1"
dns-lookup = "2.0.4"
chrono = "0.4"
kamadak-exif = "0.6.1"
dotenv = "0.15"
